tile arrangement size

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 			<ul>
 				<li class="col-md-4">
 					<a href="Cambridge.html">
-						<img src="img/Cambridge White.png" alt="" style="aspect-ratio: 65/36">
+						<img src="img/Cambridge White.png" alt="" style="width: 700px; aspect-ratio: 65/36">
 						<div class="dark-overlay"></div>
 						<img class="mobile-only" src="assets/double-right-angle.svg" width="30px" height="30px" style="position:absolute; right:5px; bottom:15px; "/>
 						<div class="innerText">
@@ -117,7 +117,7 @@
 				</li>
 				<li class="col-md-4">
 					<a href="Kings.html">
-						<img src="img/Kings white.png" alt="" style="aspect-ratio: 65/36">
+						<img src="img/Kings white.png" alt="" style="width: 700px; aspect-ratio: 65/36">
 						<div class="dark-overlay"></div>
 						<img class="mobile-only" src="assets/double-right-angle.svg" width="30px" height="30px" style="position:absolute; right:5px; bottom:15px; "/>
 						<div class="innerText">
@@ -127,7 +127,7 @@
 				</li>
 				<li class="col-md-4">
 					<a href="Princess Yachts.html">
-						<img src="img/Princess-Yachts-Logo.jpg" alt="" style="aspect-ratio: 65/36">
+						<img src="img/Princess-Yachts-Logo.jpg" alt="" style="width: 700px; aspect-ratio: 65/36">
 						<div class="dark-overlay"></div>
 						<img class="mobile-only" src="assets/double-right-angle.svg" width="30px" height="30px" style="position:absolute; right:5px; bottom:15px; "/>
 						<div class="innerText">
@@ -137,7 +137,7 @@
 				</li>
 				<li class="col-md-4">
 					<a href="Undergraduate Dissertation.html">
-						<img src="img/KCL diss.png" alt="" style="aspect-ratio: 65/36">
+						<img src="img/KCL diss.png" alt="" style="width: 700px; aspect-ratio: 65/36">
 						<div class="dark-overlay"></div>
 						<img class="mobile-only" src="assets/double-right-angle.svg" width="30px" height="30px" style="position:absolute; right:5px; bottom:15px; "/>
 						<div class="innerText">
@@ -147,7 +147,7 @@
 				</li>
 				<li class="col-md-4">
 					<a href="Data Visualisation.html">
-						<img src="img/MSDV.png" alt="" style="aspect-ratio: 65/36">
+						<img src="img/MSDV.png" alt="" style="width: 700px; aspect-ratio: 65/36">
 						<div class="dark-overlay"></div>
 						<img class="mobile-only" src="assets/double-right-angle.svg" width="30px" height="30px" style="position:absolute; right:5px; bottom:15px; "/>
 						<div class="innerText">
@@ -158,7 +158,7 @@
 
 				<li class="col-md-4">
 					<a href="GaussianProcesses.html">
-						<img src="img/gp_cover.png" alt="" style="aspect-ratio: 65/36">
+						<img src="img/gp_cover.png" alt="" style="width: 700px; aspect-ratio: 65/36">
 						<div class="dark-overlay"></div>
 						<img class="mobile-only" src="assets/double-right-angle.svg" width="30px" height="30px" style="position:absolute; right:5px; bottom:15px; "/>
 						<div class="innerText">
@@ -168,7 +168,7 @@
 				</li>
 				<li class="col-md-4">
 					<a href="ML Library.html">
-						<img src="img/ML Lib.png" alt="" style="aspect-ratio: 65/36">
+						<img src="img/ML Lib.png" alt="" style="width: 700px; aspect-ratio: 65/36">
 						<div class="dark-overlay"></div>
 						<img class="mobile-only" src="assets/double-right-angle.svg" width="30px" height="30px" style="position:absolute; right:5px; bottom:15px; "/>
 						<div class="innerText">
@@ -178,7 +178,7 @@
 				</li>
 				<li class="col-md-4">
 					<a href="Computer Vision.html">
-						<img src="img/computer vision.png" alt="" style="aspect-ratio: 65/36">
+						<img src="img/computer vision.png" alt="" style="width: 700px; aspect-ratio: 65/36">
 						<div class="dark-overlay"></div>
 						<img class="mobile-only" src="assets/double-right-angle.svg" width="30px" height="30px" style="position:absolute; right:5px; bottom:15px; "/>
 						<div class="innerText">
@@ -188,7 +188,7 @@
 				</li>
 				<li class="col-md-4">
 					<a href="Sentiment Analysis.html">
-						<img src="img/MLMI13 cover.png" alt="" style="aspect-ratio: 65/36">
+						<img src="img/MLMI13 cover.png" alt="" style="width: 700px; aspect-ratio: 65/36">
 						<div class="dark-overlay"></div>
 						<img class="mobile-only" src="assets/double-right-angle.svg" width="30px" height="30px" style="position:absolute; right:5px; bottom:15px; "/>
 						<div class="innerText">
@@ -198,7 +198,7 @@
 				</li>
 				<li class="col-md-4">
 					<a href="Speech Recognition.html">
-						<img src="img/speech cover.png" alt="" style="aspect-ratio: 65/36">
+						<img src="img/speech cover.png" alt="" style="width: 700px; aspect-ratio: 65/36">
 						<div class="dark-overlay"></div>
 						<img class="mobile-only" src="assets/double-right-angle.svg" width="30px" height="30px" style="position:absolute; right:5px; bottom:15px; "/>
 						<div class="innerText">
@@ -211,7 +211,7 @@
 
 				<li class="col-md-4">
 					<a href="Drone.html">
-						<img src="img/Drone Cad.png" alt="" style="aspect-ratio: 65/36">
+						<img src="img/Drone Cad.png" alt="" style="width: 700px; aspect-ratio: 65/36">
 						<div class="dark-overlay"></div>
 						<img class="mobile-only" src="assets/double-right-angle.svg" width="30px" height="30px" style="position:absolute; right:5px; bottom:15px; "/>
 						<div class="innerText">
@@ -221,7 +221,7 @@
 				</li>
 				<li class="col-md-4">
 					<a href="School Dissertation.html">
-						<img src="img/School Dissertation.png" alt="" style="aspect-ratio: 65/36">
+						<img src="img/School Dissertation.png" alt="" style="width: 700px; aspect-ratio: 65/36">
 						<div class="dark-overlay"></div>
 						<img class="mobile-only" src="assets/double-right-angle.svg" width="30px" height="30px" style="position:absolute; right:5px; bottom:15px; "/>
 						<div class="innerText">
@@ -231,7 +231,7 @@
 				</li>
 				<li class="col-md-4">
 					<a href="Mathwall.html">
-						<img src="img/Mathwall.jpeg" alt="" style="aspect-ratio: 65/36">
+						<img src="img/Mathwall.jpeg" alt="" style="width: 700px; aspect-ratio: 65/36">
 						<div class="dark-overlay"></div>
 						<img class="mobile-only" src="assets/double-right-angle.svg" width="30px" height="30px" style="position:absolute; right:5px; bottom:15px; "/>
 						<div class="innerText">
