--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<meta name="description" content="">
 	<meta name="author" content="">
 	<title>William Baker|Machine Learning Specialist</title>
+	<link rel="shortcut icon" type="image/jpg" href="logo 192x192 stretched square.png"/>
 	<!-- Bootstrap Core CSS -->
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 	<!-- Custom CSS -->
