--- a/tabata.html
+++ b/tabata.html
@@ -70,15 +70,15 @@
         <form>
             <div>
                 <label>Rounds</label>
-                <input type="number" name="rounds" min="0" placeholder="Number of rounds">
+                <input type="number" name="rounds" min="0" placeholder="10">
             </div>
             <div>
                 <label class="on">On (sec)</label>
-                <input type="number" name="on" min="0" step="5" placeholder="Excercise time">
+                <input type="number" name="on" min="0" step="5" placeholder="600">
             </div>
             <div>
                 <label class="off">Off (sec)</label>
-                <input type="number" name="off" min="0" step="5" placeholder="Break time">
+                <input type="number" name="off" min="0" step="5" placeholder="60">
             </div>
             <button>Go</button>
         <form>
