--- a/Speech Recognition.html
+++ b/Speech Recognition.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head><link rel="shortcut icon" type="image/jpg" href="logo 192x192 stretched square.png"/>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
