--- a/code/gp_chart.html
+++ b/code/gp_chart.html
@@ -1,6 +1,7 @@
 
 <html>
-<head><meta charset="utf-8" /></head>
+<head>
+<link rel="shortcut icon" type="image/jpg" href="logo 192x192 stretched square.png"/><meta charset="utf-8" /></head>
 <script src="https://cdn.plot.ly/plotly-2.18.0.min.js"></script>
 <body>
     <div id="e274e586-2463-4697-9fa1-6731413af43b" class="plotly-graph-div" style="height:100%; width:100%;">                   </div>
