--- a/tabata.html
+++ b/tabata.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
         <meta charset="utf-8"/>
+        <link rel="shortcut icon" type="image/jpg" href="logo 192x192 stretched square.png"/>
         <title>Tabata Timer</title>
         <!--[if lt IE 9]>
         <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
