--- a/tabata.html
+++ b/tabata.html
@@ -71,15 +71,15 @@
         <form>
             <div>
                 <label>Rounds</label>
-                <input type="number" name="rounds" min="0" placeholder="10">
+                <input type="number" name="rounds" min="0" value="10">
             </div>
             <div>
                 <label class="on">On (sec)</label>
-                <input type="number" name="on" min="0" step="5" placeholder="600">
+                <input type="number" name="on" min="0" step="5" value="600">
             </div>
             <div>
                 <label class="off">Off (sec)</label>
-                <input type="number" name="off" min="0" step="5" placeholder="60">
+                <input type="number" name="off" min="0" step="5" value="60">
             </div>
             <button>Go</button>
         <form>
