--- a/index.html
+++ b/index.html
@@ -167,6 +167,20 @@
 						</div>
 					</a>
 				</li>
+
+				<li class="col-md-4">
+					<a href="Neural Process.html">
+						<img src="img/CNP vs LNP half completion.png" alt="" style="width: 700px; aspect-ratio: 65/36">
+						<div class="dark-overlay"></div>
+						<img class="mobile-only" src="assets/double-right-angle.svg" width="30px" height="30px" style="position:absolute; right:5px; bottom:15px; "/>
+						<div class="innerText">
+							<h2>Neural Processes</h2>
+						</div>
+					</a>
+				</li>
+
+				
+
 				<li class="col-md-4">
 					<a href="ML Library.html">
 						<img src="img/ML Lib.png" alt="" style="width: 700px; aspect-ratio: 65/36">
