--- a/index.html
+++ b/index.html
@@ -38,25 +38,27 @@
 					William Baker </a>
 			</div>
 			<!-- Collect the nav links, forms, and other content for toggling -->
+			
 			<div class="collapse navbar-collapse navbar-right navbar-main-collapse">
 				<ul class="nav navbar-nav">
 					<li>
-						<a href="index.html">Home</a>
+					<a href="index.html">Home</a>
 					</li>
 					<li>
-						<a href="Cambridge.html">Cambridge</a>
+					<a href="Cambridge.html">Cambridge</a>
 					</li>
 					<li>
-						<a href="Kings.html">Kings</a>
+					<a href="Kings.html">Kings</a>
 					</li>
 					<li>
-						<a href="Undergraduate Dissertation.html">Dissertation</a>
+					<a href="Cambridge Dissertation.html">PG Thesis</a>
 					</li>
 					<li>
-						<a href="William Baker CV.pdf">CV</a>
+					<a href="Undergraduate Dissertation.html">UG Thesis</a>
 					</li>
-
-				</ul>
+					<li>
+					<a href="William Baker CV.pdf">CV</a>
+					</li>
 			</div>
 			<!-- /.navbar-collapse -->
 		</div>
@@ -133,6 +135,16 @@
 						<img class="mobile-only" src="assets/double-right-angle.svg" width="30px" height="30px" style="position:absolute; right:5px; bottom:15px; "/>
 						<div class="innerText">
 							<h2>Princess Yachts</h2>
+						</div>
+					</a>
+				</li>
+				<li class="col-md-4">
+					<a href="Cambridge Dissertation.html">
+						<img src="img/iTracr Poster small.png" alt="" style="width: 700px; aspect-ratio: 65/36">
+						<div class="dark-overlay"></div>
+						<img class="mobile-only" src="assets/double-right-angle.svg" width="30px" height="30px" style="position:absolute; right:5px; bottom:15px; "/>
+						<div class="innerText">
+							<h2>Cambridge Dissertation</h2>
 						</div>
 					</a>
 				</li>
