--- a/portfolio-item.html
+++ b/portfolio-item.html
@@ -48,7 +48,10 @@
 			<a href="Kings.html">Kings</a>
 			</li>
 			<li>
-			<a href="Undergraduate Dissertation.html">Dissertation</a>
+			<a href="Cambridge Dissertation.html">PG Thesis</a>
+			</li>
+			<li>
+			<a href="Undergraduate Dissertation.html">UG Thesis</a>
 			</li>
 			<li>
 			<a href="William Baker CV.pdf">CV</a>
