--- a/Cambridge.html
+++ b/Cambridge.html
@@ -51,12 +51,14 @@
 			<a href="Kings.html">Kings</a>
 			</li>
 			<li>
-			<a href="Undergraduate Dissertation.html">Dissertation</a>
+			<a href="Cambridge Dissertation.html">PG Thesis</a>
+			</li>
+			<li>
+			<a href="Undergraduate Dissertation.html">UG Thesis</a>
 			</li>
 			<li>
 			<a href="William Baker CV.pdf">CV</a>
 			</li>
-		</ul>
 	</div>
 	<!-- /.navbar-collapse -->
 </div>
