--- a/page-sample.html
+++ b/page-sample.html
@@ -47,7 +47,10 @@
 			<a href="Kings.html">Kings</a>
 			</li>
 			<li>
-			<a href="Undergraduate Dissertation.html">Dissertation</a>
+			<a href="Cambridge Dissertation.html">PG Thesis</a>
+			</li>
+			<li>
+			<a href="Undergraduate Dissertation.html">UG Thesis</a>
 			</li>
 			<li>
 			<a href="William Baker CV.pdf">CV</a>
