add thesis download link

--- a/Cambridge Dissertation.html
+++ b/Cambridge Dissertation.html
@@ -98,6 +98,7 @@
 			</p>
 			<p>
 				<p>
+					<a href="Inverse_Tracr.pdf" class="btnghost"><i class="fa fa-download"></i>iTracr Thesis</a>
 					<a href="InverseTracr.pdf" class="btnghost"><i class="fa fa-download"></i>iTracr Presentation</a>
 					<!-- #<a href="https://github.com/William-Baker/Claim-Detection-with-BERT-on-Semi-Structured-Text" class="btnghost"><i class="fa fa-github"></i>Code</a> -->
 					
